# jenkins-k8s-operator

./: .gitignore  .jujuignore  .licenserc.yaml  .trivyignore  .woke.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  actions.yaml  charmcraft.yaml  config.yaml  generate-src-docs.sh  index.html  install.sh  kube-config  metadata.yaml  pydoc-markdown.md  pyproject.toml  renovate.json  requirements-last-build.txt  requirements.txt  src.md  tox.ini  tox.toml
.github/: pull_request_template.md
.hermes/: integration-test-command.md  integration-test-summary.txt
1634/: index.html
1636/: index.html
1637/: index.html
1638/: index.html
1643/: index.html
1644/: index.html
1645/: index.html
1646/: index.html
1658/: index.html
1663/: index.html
1665/: index.html
1687/: index.html
1694/: index.html
1701/: index.html
1713/: index.html
1721/: index.html
1796/: index.html
1810/: index.html
1821/: index.html
1847/: index.html
1856/: index.html
1864/: index.html
1874/: index.html
1881/: index.html
1883/: index.html
1901/: index.html
1911/: index.html
1913/: index.html
1917/: index.html
1925/: index.html
1929/: index.html
1930/: index.html
1934/: index.html
allure-results/: 069d851d-96fe-4228-b775-0e169cd9cfd7-result.json  2afa0b4d-13e9-4c72-95eb-f8f28312f3eb-result.json  2feb356d-b16f-4808-8cfe-d7648233f874-result.json  4b13c136-cdbe-4cef-8a15-d4bc516ea3e3-result.json  4c3ee868-8ce9-4eb3-9aa2-6c9c3f70804e-result.json  66d9d960-bc55-473c-8903-1183a845dff8-result.json  7879c3df-1167-45eb-a13d-4ef586c511b1-result.json  86bf42bb-3900-4917-924b-5c8e0ffccd77-container.json  9e38cb66-4a29-4c75-8832-818801f3803e-result.json  9f77383f-7551-47fb-9c01-ffeac69b7a71-attachment.txt  b4a3bcb3-15ce-4ba8-9d77-be9a02d5fce7-result.json  c3b67b99-3147-4ec4-abe0-d0752ad247c0-container.json  e41e99ac-fab7-4fc1-9485-6572f363fb9f-result.json  ff220ba4-853f-4c59-9a3b-e7c1ea7298a1-container.json
docs/: changelog.md  index.md  jenkins.md  timerange.md
jenkins_rock/: rockcraft.yaml
lazydocs/: agent.md  charm.md  index.md  jenkins.md  state.md
src/: actions.py  agent.md  agent.py  auth_proxy.py  charm.md  charm.py  cos.py  exceptions.py  ingress.py  jenkins.md  jenkins.py  jenkins_.py  path.py  pebble.py  precondition.py  state.md  state.py  status.py  storage.py  timerange.md  timerange.py  types_.py
src-docs/: actions.py.md  agent.py.md  auth_proxy.py.md  charm.py.md  constants.py.md  cos.py.md  ingress.py.md  jenkins.py.md  pebble.py.md  precondition.py.md  state.py.md  status.py.md  timerange.py.md  utils.py.md
templates/: jenkins-config.xml  (+5 more)
(+3370 files in other folders)
