# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "jenkins-k8s-operator"
version = "0.1.0"
description = "Jenkins K8s operator charm."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "codespell>=2.4.1",
    "cosl==0.0.55",
    "coverage>=7.7.1",
    "httpx==0.27",
    "isort>=6.0.1",
    "jenkinsapi==0.3.13",
    "jinja2==3.1.4",
    "jsonschema==4.23.0",
    "lightkube==0.15.4",
    "mypy>=1.15.0",
    "ops==2.18.1",
    "pydantic==1.10.21",
    "pydocstyle>=6.3.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "pytest-playwright==0.4.4",
    "python-keycloak==3.12.0",
    "requests==2.32.3",
    "tenacity==8.4.2",
]

[tool.bandit]
exclude_dirs = ["/venv/"]
[tool.bandit.assert_used]
skips = ["*/*test.py", "*/test_*.py", "*tests/*.py"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
line_length = 99
profile = "black"

# Linting tools configuration
[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv"]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = ["W503", "E501", "D107"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104,D205,D212"]
docstring-convention = "google"
# Check for properly formatted copyright header in each file
copyright-check = "True"
copyright-author = "Canonical Ltd."
copyright-regexp = "Copyright\\s\\d{4}([-,]\\d{4})*\\s+%(author)s"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "cosl>=0.0.55",
    "coverage[toml]>=7.7.1",
    "httpx==0.27",
    "jinja2==3.1.4",
    "juju>=3,<4",
    "lightkube==0.15.4",
    "macaroonbakery==1.3.2",
    "ops>=2.18.1",
    "pytest-asyncio>=0.21.2",
    "pytest-operator>=0.41.0",
    "pytest-playwright==0.4.4",
    "python-keycloak==3.12.0",
    "tenacity==8.4.2",
]
